
* GITHUB#12339: Optimize part of duplicate calculation numDeletesToMerge in merge phase (fudongying)

Bug Fixes
---------------------

* GITHUB#12291: Skip blank lines from stopwords list. (Jerry Chin)

* GITHUB#12352: [Tessellator] Improve the checks that validate the diagonal between two polygon nodes so
  the resulting polygons are valid counter clockwise polygons. (Ignacio Vera)

Other
---------------------
(No changes)

======================== Lucene 9.6.0 =======================

API Changes
---------------------

* GITHUB#12116: Introduce IndexableField#storedValue() to expose the value that
  should be stored to IndexingChain without needing to guess the field's type.
  (Adrien Grand, Robert Muir)

* GITHUB#12129: Move DocValuesTermsQuery from sandbox to SortedDocValuesField#newSlowSetQuery
  and SortedSetDocValuesField#newSlowSetQuery. (Robert Muir)

* GITHUB#12173: TermInSetQuery#getTermData has been deprecated. This exposes internal implementation details that we
  may want to change in the future, and users shouldn't rely on the encoding directly. (Greg Miller)

* GITHUB#11746: Deprecate LongValueFacetCounts#getTopChildrenSortByCount. (Greg Miller)

New Features
---------------------

* GITHUB#12054: Introduce a new KeywordField for simple and efficient
  filtering, sorting and faceting. (Adrien Grand)

* GITHUB#12188: Add support for Java 20 foreign memory API. If exactly Java 19
  or 20 is used, MMapDirectory will mmap Lucene indexes in chunks of 16 GiB
  (instead of 1 GiB) and indexes closed while queries are running can no longer
  crash the JVM. To disable this feature, pass the following sysprop on Java command line:
  "-Dorg.apache.lucene.store.MMapDirectory.enableMemorySegments=false" (Uwe Schindler)

* GITHUB#12169: Introduce a new token filter to expand synonyms based on Word2Vec DL4j models. (Daniele Antuzi, Ilaria Petreti, Alessandro Benedetti)

Improvements
---------------------
